<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regbg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/pgBar"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountcreate"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:layout_marginTop="100dp"
        android:id="@+id/createtitle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createtitle"
        android:layout_marginTop="50dp"
        android:background="@color/transwhite"
        android:minHeight="50dp"
        android:drawableStart="@drawable/name"
        android:drawableLeft="@drawable/name"
        android:drawablePadding="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:id="@+id/name"
        android:hint="@string/name"
        android:textColorHint="@color/white"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="20dp"
        android:background="@color/transwhite"
        android:minHeight="50dp"
        android:drawableStart="@drawable/email"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:hint="@string/email"
        android:textColorHint="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="20dp"
        android:background="@color/transwhite"
        android:minHeight="50dp"
        android:drawableStart="@drawable/password"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:inputType="textPassword"
        android:id="@+id/cpassword"
        android:hint="@string/password"
        android:textColorHint="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cpassword"
        android:id="@+id/cbutton"
        android:layout_marginTop="35dp"
        android:text="@string/createbtntext"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:minHeight="50dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tandc"
        android:layout_below="@+id/cbutton"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:clickable="true"
        android:textSize="20sp"/>

</RelativeLayout>
