<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/regbg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:foregroundGravity="center|bottom"
        android:layout_marginTop="100dp"
        android:id="@+id/loginlogo"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginlogo"
        android:layout_marginTop="50dp"
        android:background="@color/transwhite"
        android:minHeight="50dp"
        android:drawableStart="@drawable/username"
        android:drawableLeft="@drawable/username"
        android:drawablePadding="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:id="@+id/username"
        android:hint="@string/username"
        android:textColorHint="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="20dp"
        android:background="@color/transwhite"
        android:minHeight="50dp"
        android:drawableStart="@drawable/password"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textColorHint="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:id="@+id/startbutton"
        android:layout_marginTop="20dp"
        android:text="@string/loginbtntext"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:minHeight="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/startbutton">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountcreate"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:id="@+id/createacct"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:gravity="end"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:clickable="true"/>

    </LinearLayout>

</RelativeLayout>