<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sliderthree"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headsec"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstslidercont"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingStart="50dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingEnd="50dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/cont"
        android:textColor="@color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:background="@color/colorPrimary"
        android:id="@+id/contbutt"
        />

</LinearLayout>