<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg">

<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="?attr/elevation"/>
    </android.support.design.widget.AppBarLayout>
    
</android.support.design.widget.CoordinatorLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="50dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:id="@+id/firstarea">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lp"
            android:scaleX="1"
            android:scaleY="1"
            android:scaleType="fitXY"
            android:id="@+id/locatephone"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locatephone"
            android:text="@string/locatephonetext"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:typeface="normal"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:id="@+id/secondarea">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bp"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:scaleType="fitXY"
            android:id="@+id/backup"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/backup"
            android:text="@string/locatephonetext"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:typeface="normal"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />

    </RelativeLayout>

</LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
        android:layout_marginTop="50dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/thirdarea">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ep"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:scaleType="fitXY"
            android:id="@+id/erasephone"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/erasephone"
            android:text="@string/erasephonetext"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:typeface="normal"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:id="@+id/fourtharea">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ringo"
            android:scaleX="1"
            android:scaleY="1"
            android:scaleType="fitXY"
            android:id="@+id/ringphone"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ringphone"
            android:text="@string/ringphonetext"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:typeface="normal"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            />

    </RelativeLayout>

</LinearLayout>

</LinearLayout>